logistic regression model added for both simple and normalized data.

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -3485,9 +3485,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python(Tennis_venv)",
+   "display_name": "airbnb_venv",
    "language": "python",
-   "name": "venv"
+   "name": "airbnb_venv"
   },
   "language_info": {
    "codemirror_mode": {
