--- a/notebooks/logistic_regression_model.ipynb
+++ b/notebooks/logistic_regression_model.ipynb
@@ -2142,9 +2142,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "airbnb_venv",
+   "display_name": "Python(Tennis_venv)",
    "language": "python",
-   "name": "airbnb_venv"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
