ANN classifier model added for both simple and normalized data.

--- a/notebooks/knn_model.ipynb
+++ b/notebooks/knn_model.ipynb
@@ -2935,6 +2935,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "2651a1d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../models/grid_search_knn.joblib']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "joblib.dump(\n",
+    "    grid_search_knn.best_estimator_,\n",
+    "    \"../models/grid_search_knn.joblib\"\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "09087d91",
    "metadata": {},
